modified .git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Adding config.py file.
 config.py
 # Adding additional files
-API_practive.ipynb
+API_practice.ipynb
 random_numbers.ipynb
 
 # Byte-compiled / optimized / DLL files
